--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<nav>
-  <li><a class="nav-link" routerLink="/">Home</a></li>
-  <li><a class="nav-link" routerLink="/about">About</a></li>
-</nav>
+<my-navbar></my-navbar>
 
-<hr>
 <router-outlet></router-outlet>
