--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -8,6 +8,8 @@
         <input [(ngModel)]="hero.name" placeholder="name"/>
       </label>
     </div>
+    <br>
+    <button (click)="goBack()">go back</button>
 
   </div>
 </div>
