--- a/src/app/components/shared/my-navbar/my-navbar.component.html
+++ b/src/app/components/shared/my-navbar/my-navbar.component.html
@@ -24,6 +24,10 @@
         <a class="navbar-item" routerLink="/heroes">
           Heroes
         </a>
+
+        <a class="navbar-item" routerLink="/dashboard">
+          Dashboard
+        </a>
     
         <a class="navbar-item" routerLink="/about">
           About
