--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -4,18 +4,14 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem velit iste, animi adipisci doloribus quasi cumque nesciunt est quo tenetur at sint explicabo veniam corrupti esse facilis magni veritatis repellendus.</p>
   <br>
   <ul class="heroes">
-    <li *ngFor="let hero of heroes"
-      [class.selected]="hero === selectedHero"
-      (click)="onSelect(hero)">
-      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    <li *ngFor="let hero of heroes">
+      <a routerLink="/detail/{{hero.id}}">
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
+      </a>
     </li>
   </ul>
 
   
-  <br><br>
-
-  <app-hero-detail [hero]="selectedHero"></app-hero-detail>
-
   <br><br>
 
   <app-messages></app-messages>
