--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,18 +1,34 @@
 <div class="container">
   <h1>My Heroes</h1>
   <hr>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem velit iste, animi adipisci doloribus quasi cumque nesciunt est quo tenetur at sint explicabo veniam corrupti esse facilis magni veritatis repellendus.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem velit iste, animi adipisci doloribus quasi cumque
+    nesciunt est quo tenetur at sint explicabo veniam corrupti esse facilis magni veritatis repellendus.</p>
   <br>
+
+  <div>
+    <label>Hero name:
+      <input #heroName />
+    </label>
+    <!-- (click) passes input value to add() and then clears the input -->
+    <button (click)="add(heroName.value); heroName.value=''">
+      add
+    </button>
+  </div>
+
+  <br><br>
+
   <ul class="heroes">
     <li *ngFor="let hero of heroes">
       <a routerLink="/detail/{{hero.id}}">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
       </a>
+      <button class="delete" title="delete hero"
+        (click)="delete(hero)">x</button>
     </li>
   </ul>
 
-  
   <br><br>
+
 
   <app-messages></app-messages>
 
