--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <h3>Top Heroes</h3>
   <hr>
+  <app-hero-search></app-hero-search>
+
   <div class="grid grid-pad">
     <a *ngFor="let hero of heroes" class="col-1-4"  routerLink="/detail/{{hero.id}}">
       <div class="module hero">
