--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -9,7 +9,7 @@
       </label>
     </div>
     <br>
-    <button (click)="goBack()">go back</button>
+    <button (click)="goBack()">go back</button> <button (click)="save()">save</button>
 
   </div>
 </div>
